k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: realcasuallease-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: realcasuallease
